k8s/base/service-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
